# Obsidian

./: CMakeLists.txt  README.md  main.ob
inc/: colorize.h
install/: install.ps1  install.sh
src/: common.cc  common.h  common.hpp  main.cc  main.cpp
src/compiler/: chunk.cpp  chunk.hpp
src/compiler/debug/: debug.cpp  debug.hpp
src/compiler/mem/: memory.cpp  memory.hpp
src/compiler/value/: value.cpp  value.hpp
src/compiler/vm/: runVm.cpp  vm.cpp  vm.hpp
src/helper/: errors.h  errors.hpp  flags.h  flags.hpp  version.h
src/lexer/: lexer.cc  lexer.cpp  lexer.h  lexer.hpp  tokens.h
test/: main.ob  syntax.ob
